--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -59,10 +59,6 @@
   padding-bottom: 36px;
 }
 
-.listings.hidden {
-  display: none;
-}
-
 .listings .card {
   background-color: white;
   border: 1px solid #eee;
